Realizado configuração para carregar os escopos nas authorities